# template-component

./: CMakeLists.txt  code.cpp  code.hpp  readme.md  template.c  template_main.cpp  template_statemachine.cpp  template_statemachine.hpp  template_test.cpp  template_types.hpp
test/: CMakeLists.txt  template_mock.hpp  template_test.cpp  test.cpp
